--- a/.gitignore
+++ b/.gitignore
@@ -10,14 +10,14 @@
 # Linker output
 *.ilk
 *.map
-*.exp
+# *.exp
 
 # Precompiled Headers
 *.gch
 *.pch
 
 # Libraries
-*.lib
+# *.lib
 *.a
 *.la
 *.lo
