--- a/.gitignore
+++ b/.gitignore
@@ -10,14 +10,14 @@
 # Linker output
 *.ilk
 *.map
-# *.exp
+*.exp
 
 # Precompiled Headers
 *.gch
 *.pch
 
 # Libraries
-# *.lib
+*.lib
 *.a
 *.la
 *.lo
@@ -50,3 +50,15 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# CMake
+CMakeCache.txt
+CMakeFiles
+cmake_install.cmake
+CTestTestfile.cmake
+CPackConfig.cmake
+CPackSourceConfig.cmake
+install_manifest.txt
+Makefile
+CMakeScripts
+.cmake/
